[package]
name = "cmp_env"
version = "0.1.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "research: compare std::env::var()"
keywords = ["environments"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]

[dependencies]
anyhow = "1.0"
libc = "0.2"

[dev-dependencies]
criterion = "0.3"

[workspace]
members = [
    "xtask",
]

[[bench]]
name = "bench-env"
path = "benches/bench-env.rs"
harness = false

#[[bin]]
#name = "bin-match-string"
#path = "src/bin-match-string.rs"
